# nuklear_mingw_cmake

./: .gitignore  CMakeLists.txt  README.md  dependencies.bsc
include/: calculator.h  node_editor.h  nuklear.h  nuklear_glfw_gl3.h  nuklear_init.h  overview.h  style.h
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test.c
